--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "cron": "^1.8.2",
     "express": "^4.17.1",
-    "ibm-watson": "^5.7.1",
+    "ibm-watson": "^6.0.2",
     "natural": "^2.1.5",
     "nodemon": "^2.0.6",
     "pg": "^8.3.0",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
