--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "ibm-watson": "^6.0.2",
     "natural": "^2.1.5",
     "pg": "^8.3.0",
-    "twit": "^2.2.11"
+    "twit": "^2.2.11",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.6"
+    "dotenv": "^8.2.0"
+  
   }
 }
