--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cron": "^1.8.2",
     "express": "^4.17.1",
     "ibm-watson": "^6.0.2",
     "natural": "^2.1.5",
+    "nodemon": "^2.0.6",
     "pg": "^8.3.0",
-    "twit": "^2.2.11",
-    "nodemon": "^2.0.6"
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
-  
   }
 }
